# routes/api.php
@@ -9,15 +9,12 @@ use App\Http\Controllers\GuiaController;
 use App\Http\Controllers\HorarioRecorridoController;
 use App\Http\Controllers\InsigniasController;
 use App\Http\Controllers\MembresiaController;
+use App\Http\Controllers\MembresiasUsuariosController;
 use App\Http\Controllers\RecorridoController;
 use App\Http\Controllers\ReservaController;
 use App\Http\Controllers\TarjetaController;
 use App\Http\Controllers\VentaBoletosController;
 use App\Http\Controllers\VerificationEmailController;
-use App\Models\Boletos;
-use App\Models\HorarioRecorrido;
-use App\Models\Insignias;
-use App\Models\Reserva;
 use App\Models\User;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -42,6 +39,7 @@ Route::get('email/verify/{id}/{hash}', [VerificationEmailController::class, 'ver
 Route::get('/user', [AuthController::class, 'user'])->middleware('auth:sanctum');
 
 Route::post("/login", [AuthController::class,'login'])->name('login');
+Route::get('/user/membership/{userId}', [MembresiasUsuariosController::class, 'getUserMembership']);
 Route::post("/register", [AuthController::class,'register']);
 Route::post("/logout", [AuthController::class,'logout'])->middleware("auth:sanctum");
 
@@ -104,8 +102,10 @@ Route::put('boletos/eliminar/{id}', [BoletosController::class, 'delete']);
 //!Ventas
 // Route::get('/ventas', [VentaBoletosController::class, 'traerVentasGeneral'])->middleware('auth:sanctum');
 Route::post('/venta', [VentaBoletosController::class, 'guardar'])->middleware('auth:sanctum');
+Route::post('/venta/membresia', [MembresiasUsuariosController::class, 'guardar'])->middleware('auth:sanctum');
 Route::get('/venta/usuario', [BoletosController::class, 'boletosUsuario'])->middleware('auth:sanctum');
 Route::get('reservas', [ReservaController::class, 'getReservas']);
+
 
 
 
